<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/nothing"
        android:visibility="gone"
        tools:src="@drawable/mobile_illustration" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_regular"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/karla_regular"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="?colorOnBackground"
        tools:text="@string/accessibility_service_description" />

</LinearLayout>
