<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_play_arrow_24"
        app:iconSize="80dp"
        app:iconTint="?colorOnSurfaceVariant"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/karla_regular"
        android:text="@string/focus_mode"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_usage"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeightLarge"
            android:alpha="0.9"
            android:clickable="true"
            android:fontFamily="@font/karla_regular"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:paddingHorizontal="14dp"
            android:text="@string/app_usage"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/whitelist_apps"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeightLarge"
            android:alpha="0.9"
            android:clickable="true"
            android:fontFamily="@font/karla_regular"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:paddingHorizontal="14dp"
            android:text="@string/whitelist_apps"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    </LinearLayout>
</LinearLayout>

